/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

package aasdk.proto.data;

message AudioConfig {
  required uint32 sample_rate = 1;
  required uint32 bit_depth = 2;
  required uint32 channel_count = 3;
}
